css change to solve problem with saved items alignment, see #964

--- a/themes/tuefind2/less/overrides.less
+++ b/themes/tuefind2/less/overrides.less
@@ -161,8 +161,8 @@ a.navbar-brand, nav > .nav > li > a {
   text-align: justify;
 }
 
-.save-record {
-  float: right;
+.result-links {
+  text-align: right;
 }
 
 .result {
